Small fucking Change on Index

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <main>
-        <h1 style="margin: 10vh;">Welcome to my Website</h1>
+        <h1 style="margin: 10vh;">Welcome to my fucking Website</h1>
     </main>
 
     <footer>
