--- a/index.html
+++ b/index.html
@@ -4,49 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clemens F. Bigge</title>
-    <link rel="stylesheet" href="pages/stylesheets/index.css">
+    <link rel="stylesheet" href="pages/stylesheets/index.css" />
 </head>
 
 <body>
-
     <header>
-        <a href="index.html">Clemens F. Bigge</a>
-        <button type="button" popovertarget="Navigation">Navigation</button>
+        <nav class="main-nav"> 
+            <ul class="top-nav">
+                <li><a href="index.html">Clemens F. Bigge</a></li>
+                <li><a href="pages/about.html">About</a></li>
+                <li><a href="pages/filmmusic.html">Composing for Film and Theatre</a></li>
+                <li class="dropdown">
+                    <a href="pages/current.html">Projects</a>
+                    <ul class="dropdown-content">
+                        <li class="dropdown-sub">
+                            <a href="pages/current.html">current</a>
+                            <ul>
+                                <li><a href="pages/felian.html">Felian</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="pages/past.html">past</a></li>
+                    </ul>
+                </li>
+                <li><a href="pages/pics.html">Gallery</a></li>
+                <li><a href="pages/contact.html">Contact</a></li>
+                <li>
+                    <button id="nav-open" aria-label="Open menu">
+                        <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <rect y="4" width="24" height="2" rx="1" ry="1" fill="white"/>
+                            <rect y="11" width="24" height="2" rx="1" ry="1" fill="white"/>
+                            <rect y="18" width="24" height="2" rx="1" ry="1" fill="white"/>
+                        </svg>
+                    </button>
+                </li>
+            </ul>
+        </nav>
 
-        <nav popover id="Navigation">
-            <div class="main-nav">
-                <a href="pages/about.html">About</a>
-                <a href="filmmusic/.html">Composing for Film and Theatre</a>
-                <a href="projects/bio.html">Projects</a>
-                <a href="pages/current.html">current</a>
-                <a href="pages/past.html">past</a>
-                <a href="pages/felian.html">Felian</a>
-                <a href="pages/pics.html">Pics</a>
-                <a href="pages/contact.html">Contact</a>
-            </div>
+
+        <nav class="side-nav">
+            <ul>
+                <li>
+                    <button id="nav-close" aria-label="Close menu">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 24 24" fill="none" stroke="#e3e3e3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <line x1="18" y1="6" x2="6" y2="18" />
+                            <line x1="6" y1="6" x2="18" y2="18" />
+                        </svg>
+                    </button>
+                </li>
+                <li><a href="pages/about.html">About</a></li>
+                <li><a href="pages/filmmusic.html">Composing for Film and Theatre</a></li>
+                <li class="dropdown">
+                    <a href="pages/current.html">Projects</a>
+                    <ul class="dropdown-content">
+                        <li class="dropdown-sub">
+                            <a href="pages/current.html">current</a>
+                            <ul>
+                                <li><a href="pages/felian.html">Felian</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="pages/past.html">past</a></li>
+                    </ul>
+                </li>
+                <li><a href="pages/pics.html">Gallery</a></li>
+                <li><a href="pages/contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
-
+    
     <main>
-        <h1 style="margin: 10vh;">Welcome to my fucking Website</h1>
+            <h1>Welcome to my  Website</h1>
+            <br>
+            <p>Berlin-Leipzig based</p>
+            <p>Pianist</p>
+            <p>Composer</p>
+            <p>Piano Teacher</p>
     </main>
 
     <footer>
-        <p>Mark VIII</p> <p> ---------- </p><p>=_I°x</p>
+        <div class="footer-info">
+            <span>Mark X</span>
+            <span>-----</span>
+            <span>=_|°x</span>
+        </div>
+
+        <div class="copyright">
+            <span>
+                © 2025 Clemens F. Bigge. All rights reserved.
+                Code, music, and text by Clemens F. Bigge. Photographs © their respective authors.
+            </span>
+        </div>
     </footer>
 
-    <script>
-        // Popover Navigation damit es auch auf dem Handy klappt?!
-        const nav = document.getElementById("Navigation");
-        const btn = document.querySelector('button[popovertarget="Navigation"]');
-
-        if (!("popover" in HTMLElement.prototype)) {
-            btn.addEventListener("click", (e) => {
-                e.preventDefault(); // Prevent "focus first, action later" behavior
-                nav.classList.toggle("show");
-            });
-        }
-    </script>
-
+    <script src="pages/script.js"></script>
 </body>
 </html>
