--- a/pages/pics.html
+++ b/pages/pics.html
@@ -3,32 +3,168 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="stylesheets/index.css">
+    <title>Clemens F. Bigge</title>
+    <link rel="stylesheet" href="stylesheets/index.css" />
+    <link href="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/css/lightbox.min.css" rel="stylesheet" />
+
+    <style>
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 15px;
+            padding: 20px;
+        }
+
+        .gallery img {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+            transition: 0.3s;
+        }
+
+        .gallery img:hover {
+            transform: scale(1.1);
+            cursor: pointer;
+        }
+    </style>
 </head>
 
+
 <body>
-
     <header>
-        <a href="index.html">Clemens F. Bigge</a>
-        <button popovertarget="Navigation">Navigation</button>
+        <nav class="main-nav"> 
+            <ul class="top-nav">
+                <li><a href="../index.html">Clemens F. Bigge</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="filmmusic.html">Composing for Film and Theatre</a></li>
+                <li class="dropdown">
+                    <a href="current.html">Projects</a>
+                    <ul class="dropdown-content">
+                        <li class="dropdown-sub">
+                            <a href="current.html">current</a>
+                            <ul>
+                                <li><a href="felian.html">Felian</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="past.html">past</a></li>
+                    </ul>
+                </li>
+                <li><a href="pics.html">Gallery</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li>
+                    <button id="nav-open" aria-label="Open menu">
+                        <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <rect y="4" width="24" height="2" rx="1" ry="1" fill="white"/>
+                            <rect y="11" width="24" height="2" rx="1" ry="1" fill="white"/>
+                            <rect y="18" width="24" height="2" rx="1" ry="1" fill="white"/>
+                        </svg>
+                    </button>
+                </li>
+            </ul>
+        </nav>
 
-        <nav popover id="Navigation">
-            <div>
-                <a href="felian.html">Felian</a>
-                <a href="bio.html">Bio</a>
-                <a href="pics.html">Pics</a>
-                <a href="contact.html">Contact</a>
-            </div>
+
+        <nav class="side-nav">
+            <ul>
+                <li>
+                    <button id="nav-close" aria-label="Close menu">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 24 24" fill="none" stroke="#e3e3e3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <line x1="18" y1="6" x2="6" y2="18" />
+                            <line x1="6" y1="6" x2="18" y2="18" />
+                        </svg>
+                    </button>
+                </li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="filmmusic.html">Composing for Film and Theatre</a></li>
+                <li class="dropdown">
+                    <a href="current.html">Projects</a>
+                    <ul class="dropdown-content">
+                        <li class="dropdown-sub">
+                            <a href="current.html">current</a>
+                            <ul>
+                                <li><a href="felian.html">Felian</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="past.html">past</a></li>
+                    </ul>
+                </li>
+                <li><a href="pics.html">Gallery</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
-
+    
     <main>
-        <h1 style="margin: 10vh;">Pictures</h1>
+        <div class="main-content">
+            <h1>Gallery</h1>
+        </div>
+
+        <section class="gallery">
+            <a href="../pics/gallery/1.jpeg" data-lightbox="gallery" data-title="Rio Reiser - Mein Name ist Mensch // © Kai Dannowski">
+                <img src="../pics/gallery/1.jpeg" alt="1" />
+            </a>
+            <a href="../pics/gallery/2.jpg" data-lightbox="gallery" data-title="© Nathan Lauer">
+                <img src="../pics/gallery/2.jpg" alt="2" />
+            </a>
+            <a href="../pics/gallery/3.jpg" data-lightbox="gallery" data-title="3 // © Nora Lyn Handschuh">
+                <img src="../pics/gallery/3.jpg" alt="3">
+            </a>
+            <a href="../pics/gallery/4.jpg" data-lightbox="gallery" data-title="4 // © Nora Lyn Handschuh">
+                <img src="../pics/gallery/4.jpg" alt="4">
+            </a>
+            <a href="../pics/gallery/5.jpeg" data-lightbox="gallery" data-title="Rio Reiser - Mein Name ist Mensch // © Kai Dannowski">
+                <img src="../pics/gallery/5.jpeg" alt="5">
+            </a>
+            <a href="../pics/gallery/6.jpeg" data-lightbox="gallery" data-title="Rio Reiser - Mein Name ist Mensch // © Kai Dannowski">
+                <img src="../pics/gallery/6.jpeg" alt="6">
+            </a>
+            <a href="../pics/gallery/7.jpg" data-lightbox="gallery" data-title="A concert with no:la // © Wanja Woltersdorf">
+                <img src="../pics/gallery/7.jpg" alt="7">
+            </a>
+            <a href="../pics/gallery/8.jpg" data-lightbox="gallery" data-title="A concert with no:la // © Wanja Woltersdorf">
+                <img src="../pics/gallery/8.jpg" alt="8">
+            </a>
+            <a href="../pics/gallery/9.jpg" data-lightbox="gallery" data-title="A concert with no:la // © Wanja Woltersdorf">
+                <img src="../pics/gallery/9.jpg" alt="9">
+            </a>
+            <a href="../pics/gallery/10.jpg" data-lightbox="gallery" data-title="A concert with no:la // © Wanja Woltersdorf">
+                <img src="../pics/gallery/10.jpg" alt="10">
+            </a>
+            <a href="../pics/gallery/11.jpg" data-lightbox="gallery" data-title="A concert with no:la // © Wanja Woltersdorf">
+                <img src="../pics/gallery/11.jpg" alt="11">
+            </a>
+            <a href="../pics/gallery/12.jpg" data-lightbox="gallery" data-title="A concert with no:la // © Wanja Woltersdorf">
+                <img src="../pics/gallery/12.jpg" alt="12">
+            </a>
+            <a href="../pics/gallery/13.jpg" data-lightbox="gallery" data-title="© Philipp Baslik">
+                <img src="../pics/gallery/13.jpg" alt="13">
+            </a>
+            <a href="../pics/gallery/14.jpg" data-lightbox="gallery" data-title="A concert with no:la // © Wanja Woltersdorf">
+                <img src="../pics/gallery/14.jpg" alt="14">
+            </a>
+            <a href="../pics/gallery/15.jpeg" data-lightbox="gallery" data-title="Rio Reiser - Mein Name ist Mensch // left to right: Tim Huber, Daniel Splitt, Clemens F. Bigge // © Kai Dannowski">
+                <img src="../pics/gallery/15.jpeg" alt="15">
+            </a>
+        </section>
     </main>
 
     <footer>
-        <p>Mark VIII</p> <p> ---------- </p><p>=_I°x</p>
+        <div class="footer-info">
+            <p>Mark X</p>
+            <p>-----</p>
+            <p>=_|°x</p>
+        </div>
+
+        <div class="copyright">
+            <p>
+                © 2025 Clemens F. Bigge. All rights reserved.
+                Code, music, and text by Clemens F. Bigge. Photographs © their respective authors.
+            </p>
+        </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/js/lightbox.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
