Title and Meta Data changes for SEO

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clemens F. Bigge</title>
+    <title>Clemens F. Bigge - Musician | Pianist | Composer | Teacher</title>
+    <meta name="description" content="Welcome to the official portfolio of Clemens F. Bigge – musician, pianist, composer, and teacher. Explore his creative projects, performances, and contact information.">
     <link rel="stylesheet" href="pages/stylesheets/index.css" />
 </head>
 
