--- a/pages/filmmusic.html
+++ b/pages/filmmusic.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clemens F. Bigge</title>
+    <title>Clemens F. Bigge - Composition Portfolio for Theatre, Film, and Visual Media</title>
+    <meta name="description" content="Discover the portfolio of Clemens F. Bigge, showcasing original compositions and music crafted for theatre, films and visual media.">
     <link rel="stylesheet" href="stylesheets/index.css" />
 </head>
 
