--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clemens F. Bigge</title>
+    <title>About Clemens F. Bigge - Musician | Pianist | Composer | Teacher</title>
+    <meta name="description" content="Learn more about Clemens F. Bigge, a dedicated musician, pianist, composer, and teacher. Discover his background, experience, and artistic journey.">
     <link rel="stylesheet" href="stylesheets/index.css" />
 </head>
 
