--- a/pages/fpages/f1.html
+++ b/pages/fpages/f1.html
@@ -12,7 +12,7 @@
                     <li class="ich">Clemens F. Bigge</li>
                     <li>
                         <ul class="navi">
-                            <li class="navi"><a href="../index.html">Home</a></li>
+                            <li class="navi"><a href="../../index.html">Home</a></li>
                             <li class="navi"><a href="pages/felian.html">Felian</a></li>
                         </ul>
                     </li>
@@ -51,9 +51,20 @@
             </script>
             <input type="button" value="Fabian" onclick="Felian1()" />
 
-        <footer>
-            This is the Footer
-        </footer>             
+    <footer>
+        <div class="footer-info">
+            <span>Mark X</span>
+            <span><a href="../impressum.html">Impressum</a></span>
+            <span>=_|°x</span>
+        </div>
+
+        <div class="copyright">
+            <span>
+                © 2025 Clemens F. Bigge. All rights reserved.
+                Code, music, and text by Clemens F. Bigge. Photographs © their respective authors.
+            </span>
+        </div>
+    </footer>          
 
     </body>
 </html>
