--- a/pages/fpages/f3.html
+++ b/pages/fpages/f3.html
@@ -12,7 +12,7 @@
                     <li class="ich">Clemens F. Bigge</li>
                     <li>
                         <ul class="navi">
-                            <li class="navi"><a href="../index.html">Home</a></li>
+                            <li class="navi"><a href="../../index.html">Home</a></li>
                             <li class="navi"><a href="felian.html">Felian</a></li>
                         </ul>
                     </li>
@@ -69,8 +69,19 @@
             <p>Nope, something else that happened: I put my name on the left right of the navigation and home and Felian on the left. I googled how to do it and now the home button is gone. Maybe I find it somewhere in my flat later. What the Fuck? Well, also they stay, when you scroll down, which was unintended but is kind of cool. Maybe I do this with the whole navigation section. So now I am finished. Fuck off.</p>
             <h2>Friday</h2>
             <p>Well... in the end there is no percussion and I didn't to the search of my "Home"-link. It must be somewhere, because it is in the code. Next time I will get the archive ready and make sure the "Home"-link returns home. <br>Next upload next friday, as always around 4 pm. <br>Have a good weekend!</p>
-        <footer>
-            This is the Footer
-        </footer>                 
+    <footer>
+        <div class="footer-info">
+            <span>Mark X</span>
+            <span><a href="../impressum.html">Impressum</a></span>
+            <span>=_|°x</span>
+        </div>
+
+        <div class="copyright">
+            <span>
+                © 2025 Clemens F. Bigge. All rights reserved.
+                Code, music, and text by Clemens F. Bigge. Photographs © their respective authors.
+            </span>
+        </div>
+    </footer>               
     </body>
 </html>
