--- a/pages/fpages/f5.html
+++ b/pages/fpages/f5.html
@@ -52,9 +52,20 @@
         
         
 
-        <footer>
-            This is the Footer
-        </footer>
+    <footer>
+        <div class="footer-info">
+            <span>Mark X</span>
+            <span><a href="../impressum.html">Impressum</a></span>
+            <span>=_|°x</span>
+        </div>
+
+        <div class="copyright">
+            <span>
+                © 2025 Clemens F. Bigge. All rights reserved.
+                Code, music, and text by Clemens F. Bigge. Photographs © their respective authors.
+            </span>
+        </div>
+    </footer>
 
 
         <script>
