--- a/pages/fpages/f6.html
+++ b/pages/fpages/f6.html
@@ -55,9 +55,20 @@
             <p>Yesterday and Wednesday I hadn't have the time. So I had to pull a quick one today. The music got a little Aufbau through the Rhythm Section. And I had to fix some path errors. Now we can hear the music again. Till next week! <br>CYA!</p>
         <br><br><br>
         </main>
-        <footer>
-            This page was built by me. Obviously. Look at the shit
-        </footer>
+    <footer>
+        <div class="footer-info">
+            <span>Mark X</span>
+            <span><a href="../impressum.html">Impressum</a></span>
+            <span>=_|°x</span>
+        </div>
+
+        <div class="copyright">
+            <span>
+                © 2025 Clemens F. Bigge. All rights reserved.
+                Code, music, and text by Clemens F. Bigge. Photographs © their respective authors.
+            </span>
+        </div>
+    </footer>
     </body>
 <!--
     <body>
