--- a/pages/fpages/f8.html
+++ b/pages/fpages/f8.html
@@ -64,9 +64,20 @@
                 <br><br><br>
             </div>
         </main>
-        <footer>
-            <p>Mark VIII</p> <p> ---------- </p><p>=_I°x</p>
-        </footer>   
+    <footer>
+        <div class="footer-info">
+            <span>Mark X</span>
+            <span><a href="../impressum.html">Impressum</a></span>
+            <span>=_|°x</span>
+        </div>
+
+        <div class="copyright">
+            <span>
+                © 2025 Clemens F. Bigge. All rights reserved.
+                Code, music, and text by Clemens F. Bigge. Photographs © their respective authors.
+            </span>
+        </div>
+    </footer>  
         
         <script>
             const nav = document.getElementById("Navigation");
