--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -75,7 +75,7 @@
     
             <h1>Impressum</h1>
 
-            <p>Angaben gemäß § 5 DDG: <br>Clemens F. Bigge <br>Comeniusstraße 28 <br>04315 Leipzig <br>Deutschland</p><br>
+            <p>Angaben gemäß § 5 DDG: <br><br>Clemens F. Bigge <br>Comeniusstraße 28 <br>04315 Leipzig <br>Deutschland</p><br>
             <p>T: +49 176 61290668 <br>E: clemensbigge@live.de</p><br>
             <p>Verantwortlich für den Inhalt § 18 Abs. 2 MStV: <br>Clemens F. Bigge, Adresse wie oben</p>
         
