--- a/pages/fpages/f8.html
+++ b/pages/fpages/f8.html
@@ -68,6 +68,7 @@
         <div class="footer-info">
             <span>Mark X</span>
             <span><a href="../impressum.html">Impressum</a></span>
+	    <span><a href="../datenschutz.html">Datenschutzerklärung / Privacy Policy</a></span>
             <span>=_|°x</span>
         </div>
 
