--- a/pages/projects.html
+++ b/pages/projects.html
@@ -77,20 +77,16 @@
         </div>
     </main>
 
-    <footer>
-        <div class="footer-info">
-            <span>Mark X</span>
-            <span><a href="impressum.html">Impressum</a></span>
-            <span>=_|°x</span>
-        </div>
 
-        <div class="copyright">
-            <span>
-                © 2025 Clemens F. Bigge. All rights reserved.
-                Code, music, and text by Clemens F. Bigge. Photographs © their respective authors.
-            </span>
-        </div>
-    </footer>
+<div id="footer">
+<script>
+	fetch('footer.html')
+	.then(response => response.text())
+	.then(data => {
+		document.getElementById('footer').innerHTML = data;
+	});
+</script>	
+</div>
 
     <script src="script.js"></script>
 </body>
