--- a/index.html
+++ b/index.html
@@ -81,21 +81,16 @@
             <p>Piano Teacher</p>
     </main>
 
-    <footer>
-        <div class="footer-info">
-            <span>Mark X</span>
-            <span><a href="pages/impressum.html">Impressum</a></span>
-            <span>=_|°x</span>
-        </div>
+<div id="footer">
+<script>
+	fetch('pages/footer.html')
+	.then(response => response.text())
+	.then(data => {
+		document.getElementById('footer').innerHTML = data;
+	});
+</script>	
+</div>
 
-        <div class="copyright">
-            <span>
-                © 2025 Clemens F. Bigge. All rights reserved.
-                Code, music, and text by Clemens F. Bigge. Photographs © their respective authors.
-            </span>
-        </div>
-    </footer>
-
-    <script src="pages/script.js"></script>
+<script src="pages/script.js"></script>
 </body>
-</html>
+</html>r
