--- a/pages/fpages/f1.html
+++ b/pages/fpages/f1.html
@@ -55,6 +55,7 @@
         <div class="footer-info">
             <span>Mark X</span>
             <span><a href="../impressum.html">Impressum</a></span>
+	    <span><a href="../datenschutz.html">Datenschutzerklärung / Privacy Policy</a></span>
             <span>=_|°x</span>
         </div>
 
