--- a/pages/pics.html
+++ b/pages/pics.html
@@ -148,21 +148,16 @@
         </section>
     </main>
 
-    <footer>
-        <div class="footer-info">
-            <span>Mark X</span>
-            <span><a href="impressum.html">Impressum</a></span>
-            <span>=_|°x</span>
-        </div>
 
-        <div class="copyright">
-            <span>
-                © 2025 Clemens F. Bigge. All rights reserved.
-                Code, music, and text by Clemens F. Bigge. Photographs © their respective authors.
-            </span>
-        </div>
-    </footer>
-
+<div id="footer">
+<script>
+	fetch('footer.html')
+	.then(response => response.text())
+	.then(data => {
+		document.getElementById('footer').innerHTML = data;
+	});
+</script>	
+</div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/js/lightbox.min.js"></script>
     <script src="script.js"></script>
