--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </header>
     
     <main>
-            <h1>Welcome to my fucking Website</h1>
+            <h1>Welcome to my  Website</h1>
             <br>
             <p>Berlin-Leipzig based</p>
             <p>Pianist</p>
